--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Real-time BINGO Game</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script src="game.js" defer></script>
 </head>
 
 <body>
@@ -90,7 +91,6 @@
             </div>
         </div> -->
     </div>
-    <script src="game.js"></script>
 </body>
 
 </html>
