--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real-time BINGO Game</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script src="https://js.pusher.com/8.2.0/pusher.min.js"></script>
+   
     <script src="game.js" defer></script>
 </head>
 
